add mongo repository (#12)
