# src/core/domain/entity/vehicle.go
@@ -1,9 +1,14 @@
 package entity
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type Vehicle struct {
 	ID        string
+	EntityID  uuid.UUID
 	Brand     string
 	Model     string
 	Year      int
