# src/docs/swagger.yaml
@@ -12,6 +12,8 @@ definitions:
         type: string
       created_at:
         type: string
+      entity_id:
+        type: string
       id:
         type: string
       model:
@@ -77,12 +79,12 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/responses.Vehicle'
-        "204":
-          description: No Content
-          schema:
-            $ref: '#/definitions/responses.ErrorResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
         "500":
@@ -92,7 +94,7 @@ paths:
       summary: Create Vehicle
       tags:
       - Vehicle
-  /vehicles/{vehicle_id}:
+  /vehicles/{entity_id}:
     patch:
       consumes:
       - application/json
@@ -110,12 +112,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/responses.Vehicle'
-        "204":
-          description: No Content
-          schema:
-            $ref: '#/definitions/responses.ErrorResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
         "500":
